Replaced new Boolean(...) with Boolean.valueOf(...) (FindBugs)