@@ -1,6 +1,6 @@
 /*
  * IRIS -- Intelligent Roadway Information System
- * Copyright (C) 2005  Minnesota Department of Transportation
+ * Copyright (C) 2005-2008  Minnesota Department of Transportation
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -11,10 +11,6 @@
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  * GNU General Public License for more details.
- *
- * You should have received a copy of the GNU General Public License
- * along with this program; if not, write to the Free Software
- * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  */
 package us.mn.state.dot.tms.client.meter;
 
@@ -137,8 +133,8 @@ public class TimingPlanModel extends AbstractTableModel {
 				values[i][COL_CYCLE] = calculateCycleTime(
 					target);
 			}
-			values[i][COL_ACTIVE] = new Boolean(p.isActive());
-			values[i][COL_TESTING] = new Boolean(p.isTesting());
+			values[i][COL_ACTIVE] = Boolean.valueOf(p.isActive());
+			values[i][COL_TESTING] = Boolean.valueOf(p.isTesting());
 		}
 	}
 
